# app/src/main/openapi/archiving-api.yaml
@@ -285,7 +285,7 @@ paths:
         - open-id-connect: [ write ]
       description: |-
         Removes the assignment of a resource from the assigned location.
-      operationId: unassignResourceToLocation
+      operationId: unassignResourceFromLocation
       parameters:
         - name: locationId
           in: path
@@ -389,6 +389,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponseDto'
   /api/archive/referenced-resource/{id}/versions/{version}:
+    parameters:
+      - name: id
+        in: path
+        description: Unique data resource identifier
+        required: true
+        schema:
+          type: string
+          format: uuid
+      - name: version
+        in: path
+        description: Data resource version
+        required: true
+        schema:
+          type: string
     post:
       tags:
         - archiving
@@ -580,9 +594,9 @@ components:
         author:
           type: string
           description: "Modifying author"
-        aprover:
+        approver:
           type: string
-          description: "Name of the aprover"
+          description: "Name of the approver"
         type:
           type: string
           description: "Content type"
@@ -629,7 +643,7 @@ components:
         name:
           type: string
           description: "Partially match allowed"
-        aprover:
+        approver:
           type: string
           description: "Fulltext match which can be retrieved via extra endpoint"
         contentType:
